<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="?attr/backgroundColor"
    android:layout_height="match_parent">

    <View
        android:id="@+id/view2"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info"
        android:fontFamily="@font/font_xtrabold"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2">

        <ImageView
            android:id="@+id/info_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo2"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/info_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_semibold"
            android:text="@string/tentang_aplikasi"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:layout_below="@id/info_logo"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"/>
        <TextView
            android:id="@+id/info_versi_app"
            android:layout_width="match_parent"
            android:layout_marginEnd="70dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_regular"
            android:text="@string/versi_aplikasi"
            android:textSize="16sp"
            android:layout_below="@id/info_text"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/info_versi_db"
            android:layout_width="match_parent"
            android:layout_marginEnd="70dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_regular"
            android:text="@string/versi_db"
            android:textSize="16sp"
            android:layout_below="@id/info_versi_app"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/versi_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_regular"
            android:text="@string/numVersi"
            android:layout_alignParentEnd="true"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_below="@id/info_text"/>
        <TextView
            android:id="@+id/versi_db"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_regular"
            android:text="@string/numVersi"
            android:layout_alignParentEnd="true"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_below="@id/info_versi_app"/>

        <TextView
            android:id="@+id/pusat_bantuan"
            android:layout_width="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_semibold"
            android:text="@string/pusat_bantuan"
            android:textSize="16sp"
            android:layout_below="@id/info_versi_db"
            android:layout_marginStart="10dp"
            android:layout_marginTop="150dp"
            app:drawableEndCompat="@drawable/ic_next" />
        <TextView
            android:id="@+id/syarat_ketentuan"
            android:layout_width="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_semibold"
            android:text="@string/syarat_ketentuan"
            android:textSize="16sp"
            android:layout_below="@id/pusat_bantuan"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp"
            app:drawableEndCompat="@drawable/ic_next"/>
        <TextView
            android:id="@+id/kebijakan_privasi"
            android:layout_width="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_semibold"
            android:text="@string/kebijakan_privasi"
            android:textSize="16sp"
            android:layout_below="@id/syarat_ketentuan"
            android:layout_marginStart="10dp"
            app:drawableEndCompat="@drawable/ic_next"
            android:layout_marginTop="2dp"/>

        <TextView
            android:id="@+id/findUs"
            android:layout_width="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_semibold"
            android:text="@string/temukan_kami"
            android:textSize="12sp"
            android:textAlignment="center"
            android:layout_below="@id/syarat_ketentuan"
            android:layout_marginStart="10dp"
            android:layout_marginTop="120dp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/followus"
            android:layout_marginTop="10dp"
            android:layout_below="@id/findUs"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>