<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor">

    <View
        android:id="@+id/view2"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:background="@drawable/bg_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/photoView"
        android:layout_width="350dp"
        android:layout_height="250dp"
        android:layout_marginBottom="150dp"
        android:src="@drawable/thumbnail"
        app:layout_constraintBottom_toTopOf="@+id/detect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/camera"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/camera_button"
        android:elevation="2dp"
        android:scaleType="fitCenter"
        app:backgroundTint="@color/green4"
        app:fabCustomSize="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/detect"
        app:maxImageSize="35dp"
        app:srcCompat="@drawable/ic_camera" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/detect"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/detect_content"
        android:textSize="16sp"
        android:visibility="invisible"
        android:text="@string/detect"
        android:textColor="@color/white"
        app:backgroundTint="@color/red1"
        app:icon="@drawable/ic_detect"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/gallery"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/gallery_button"
        android:elevation="2dp"
        android:scaleType="fitCenter"
        app:backgroundTint="@color/light_grey3"
        app:fabCustomSize="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/detect"
        app:layout_constraintStart_toStartOf="parent"
        app:maxImageSize="35dp"
        app:srcCompat="@drawable/ic_gallery" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font_xtrabold"
        android:text="@string/hasil_analisa"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:visibility="invisible"
        android:textColor="?attr/titleTextColor"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photoView" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:visibility="invisible"
        android:layout_width="140dp"
        android:layout_height="120dp"
        android:layout_marginBottom="70dp"
        android:layout_marginEnd="180dp"
        app:layout_constraintBottom_toTopOf="@+id/detect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Title, secondary and supporting text -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_pest_tittle"
                    android:drawablePadding="4dp"
                    android:fontFamily="@font/font_xtrabold"
                    android:text="@string/jenis_hama"
                    android:textAllCaps="true"
                    android:textColor="@color/blue1" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/black" />

                <TextView
                    android:id="@+id/result_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/font_semibold"
                    android:textAlignment="center"
                    android:textColor="@color/green5"
                    android:textSize="18sp"
                    tools:text="@tools:sample/cities" />
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card2"
        android:visibility="invisible"
        android:layout_width="140dp"
        android:layout_height="120dp"
        android:layout_marginBottom="70dp"
        android:layout_marginStart="180dp"
        app:layout_constraintBottom_toTopOf="@+id/detect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Title, secondary and supporting text -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_percent"
                    android:fontFamily="@font/font_xtrabold"
                    android:text="@string/akurasi"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/blue1" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/black" />

                <TextView
                    android:id="@+id/percent_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/font_semibold"
                    android:textAlignment="center"
                    android:textColor="@color/red1"
                    android:textSize="24sp"
                    tools:text="@tools:sample/cities" />
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_marginTop="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>