<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:id="@+id/view2"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:fontFamily="@font/font_xtrabold"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2">

        <TextView
            android:id="@+id/bahasa"
            android:layout_width="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_height="wrap_content"
            android:text="@string/bahasa"
            android:fontFamily="@font/font_semibold"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            app:drawableStartCompat="@drawable/ic_language"
            android:drawablePadding="10dp"
            app:drawableEndCompat="@drawable/ic_next" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:background="@color/grey2"
            android:layout_below="@id/bahasa"/>
        <TextView
            android:id="@+id/tema"
            android:layout_width="200dp"
            android:layout_marginEnd="10dp"
            android:layout_height="wrap_content"
            android:text="@string/tema"
            android:textSize="18sp"
            android:fontFamily="@font/font_semibold"
            android:layout_below="@id/bahasa"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            app:drawableStartCompat="@drawable/ic_light"
            android:drawablePadding="10dp"/>
        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/switchTema"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/view"
            android:layout_marginEnd="20dp"
            app:trackTint="?attr/track"
            app:thumbIcon="@drawable/thumb_icon"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:background="@color/grey2"
            android:layout_below="@id/tema"/>




    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>